@@ -1473,20 +1473,6 @@ EXCEPTION WHEN OTHERS THEN RETURN NULL;
 END;
 $$ LANGUAGE PLPGSQL STABLE;
 
-CREATE OR REPLACE FUNCTION _quote_ident_like(TEXT, TEXT)
-RETURNS TEXT AS $$
-DECLARE
-    typname TEXT := _typename($1);
-    pcision TEXT := COALESCE(substring($1 FROM '[(][^")]+[)]$'), '');
-BEGIN
-    -- Just return it if rhs isn't quoted.
-    IF $2 !~ '"' THEN RETURN typname || pcision; END IF;
-
-    -- Otherwise return it with the type part quoted.
-    RETURN quote_ident(typname) || pcision;
-END;
-$$ LANGUAGE plpgsql;
-
 -- col_type_is( schema, table, column, schema, type, description )
 CREATE OR REPLACE FUNCTION col_type_is ( NAME, NAME, NAME, NAME, TEXT, TEXT )
 RETURNS TEXT AS $$
@@ -4088,12 +4074,8 @@ $$ LANGUAGE SQL;
 
 CREATE OR REPLACE FUNCTION _cmp_types(oid, name)
 RETURNS BOOLEAN AS $$
-DECLARE
-    dtype TEXT := pg_catalog.format_type($1, NULL);
-BEGIN
-    RETURN dtype = _quote_ident_like($2, dtype);
-END;
-$$ LANGUAGE plpgsql;
+    SELECT pg_catalog.format_type($1, NULL) = _typename($2);
+$$ LANGUAGE sql;
 
 CREATE OR REPLACE FUNCTION _cast_exists ( NAME, NAME, NAME, NAME )
 RETURNS BOOLEAN AS $$
@@ -7843,7 +7825,10 @@ BEGIN
         );
     END IF;
 
-    RETURN is( actual_type, quote_ident($3) || '.' || _quote_ident_like($4, actual_type), $5 );
+    IF quote_ident($3) = ANY(current_schemas(true)) THEN
+        RETURN is( actual_type, quote_ident($3) || '.' || _typename($4), $5);
+    END IF;
+    RETURN is( actual_type, _typename(quote_ident($3) || '.' || $4), $5);
 END;
 $$ LANGUAGE plpgsql;
 
@@ -7870,7 +7855,7 @@ BEGIN
         );
     END IF;
 
-    RETURN is( actual_type, _quote_ident_like($3, actual_type), $4 );
+    RETURN is( actual_type, _typename($3), $4 );
 END;
 $$ LANGUAGE plpgsql;
 
@@ -7896,7 +7881,7 @@ BEGIN
         );
     END IF;
 
-    RETURN is( actual_type, _quote_ident_like($2, actual_type), $3 );
+    RETURN is( actual_type, _typename($2), $3 );
 END;
 $$ LANGUAGE plpgsql;
 
@@ -7922,7 +7907,10 @@ BEGIN
         );
     END IF;
 
-    RETURN isnt( actual_type, quote_ident($3) || '.' || _quote_ident_like($4, actual_type), $5 );
+    IF quote_ident($3) = ANY(current_schemas(true)) THEN
+        RETURN isnt( actual_type, quote_ident($3) || '.' || _typename($4), $5);
+    END IF;
+    RETURN isnt( actual_type, _typename(quote_ident($3) || '.' || $4), $5);
 END;
 $$ LANGUAGE plpgsql;
 
@@ -7949,7 +7937,7 @@ BEGIN
         );
     END IF;
 
-    RETURN isnt( actual_type, _quote_ident_like($3, actual_type), $4 );
+    RETURN isnt( actual_type, _typename($3), $4 );
 END;
 $$ LANGUAGE plpgsql;
 
@@ -7975,7 +7963,7 @@ BEGIN
         );
     END IF;
 
-    RETURN isnt( actual_type, _quote_ident_like($2, actual_type), $3 );
+    RETURN isnt( actual_type, _typename($2), $3 );
 END;
 $$ LANGUAGE plpgsql;
 
