@@ -15,6 +15,14 @@ Revision history for pgTAP
 * Removed the documentation for `pg_typeof()`, which was removed from pgTAP
   when support for PostgreSQL 8.3 was dropped, since the same function has
   been available in the PostgreSQL core since then.
+* Improved the support for type name aliases to the following functions:
+    * `has_cast()`
+    * `hasnt_cast()`
+    * `cast_context_is()`
+    * `domain_type_is()`
+    * `domain_type_isnt()`
+    * `has_operator()`
+    * `hasnt_operator()`
 
 1.3.0 2023-08-14T22:14:20Z
 --------------------------
